%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_char_con
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: animSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: animAttack
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: animAbility
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110245038}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110100844
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245038}
  m_DstState: {fileID: 110216262}
  m_TransitionDuration: .260869563
  m_TransitionOffset: .00697682751
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAbility
    m_EventTreshold: 2
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110110259
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110216262}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAbility
    m_EventTreshold: 2
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110113781
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245038}
  m_DstState: {fileID: 110212881}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAbility
    m_EventTreshold: 3
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110129875
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245038}
  m_DstState: {fileID: 110223194}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 1
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133166
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110254041}
  m_DstState: {fileID: 110245038}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133655
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110229051}
  m_DstState: {fileID: 110245038}
  m_TransitionDuration: .375
  m_TransitionOffset: .0814675689
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 0
    m_ExitTime: .625
  - m_ConditionMode: 3
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .625
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110134407
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110229051}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 2
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110141413
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245038}
  m_DstState: {fileID: 110229051}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 2
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110141498
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110212881}
  m_DstState: {fileID: 110245038}
  m_TransitionDuration: .136434317
  m_TransitionOffset: .586220264
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145112
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110223194}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 1
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110147710
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110216262}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: .530637085
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110154127
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245038}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110163950
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110223194}
  m_DstState: {fileID: 110245038}
  m_TransitionDuration: .352941185
  m_TransitionOffset: .0977610871
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 0
    m_ExitTime: .647058845
  - m_ConditionMode: 3
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .647058845
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110169341
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245038}
  m_DstState: {fileID: 110254041}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAbility
    m_EventTreshold: 1
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110169832
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110254041}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .180442065
  m_TransitionOffset: .0804276019
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .819557905
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110169988
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110212881}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .126024559
  m_TransitionOffset: .751928926
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177250
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110229051}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .375
  m_TransitionOffset: .0706052259
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 0
    m_ExitTime: .625
  - m_ConditionMode: 4
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .625
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110180385
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110212881}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAbility
    m_EventTreshold: 3
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110185982
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110254041}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAbility
    m_EventTreshold: 1
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110187723
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110223194}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .352941185
  m_TransitionOffset: .0923299342
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: animAttack
    m_EventTreshold: 0
    m_ExitTime: .647058845
  - m_ConditionMode: 4
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .647058845
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190255
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110216262}
  m_DstState: {fileID: 110245038}
  m_TransitionDuration: .100000001
  m_TransitionOffset: .255842805
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: animSpeed
    m_EventTreshold: .200000003
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 589c54b0a30f54d4d833837dc79082f1, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 156, y: 156, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110212426
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_runSide_L
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: f265de5ee5b65a34d859c4645f8c68c8, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 720, y: 96, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110212881
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_bubbleShield
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: cf50580f1167a9945a8e3989a04c9fbd, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 288, y: -60, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110216262
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_healingShot
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 0d270750b7aaa2e448e5249c51b7eb9e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: 36, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110217212
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_runSide_R
  m_Speed: 1
  m_CycleOffset: .5
  m_Motions:
  - {fileID: 7400000, guid: f265de5ee5b65a34d859c4645f8c68c8, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 720, y: 156, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 1
  m_Tag: 
--- !u!1102 &110219916
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_runBackwards
  m_Speed: -1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d4824c4c394292647b45a9ea38103593, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 720, y: 216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110223194
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_swordAttack_L
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 0ffbb1ba4528c8448a7a46d8a47c5188, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 72, y: 276, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110229051
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_gunAttack_R
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 0d270750b7aaa2e448e5249c51b7eb9e, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 504, y: 276, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110245038
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_run-full
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d4824c4c394292647b45a9ea38103593, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 432, y: 156, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110254041
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: main_whirlwind
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 57e06fa90245e884eb6150032e8cee59, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 24, y: 24, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110299386
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: run2
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 0991a6ab06913ec448f8695abe1d7ff6, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 492, y: 168, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110245038}
  - {fileID: 110223194}
  - {fileID: 110229051}
  - {fileID: 110212881}
  - {fileID: 110216262}
  - {fileID: 110254041}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110145112}
      - {fileID: 110134407}
      - {fileID: 110180385}
      - {fileID: 110110259}
      - {fileID: 110185982}
    data:
      first: {fileID: 110212881}
      second:
      - {fileID: 110169988}
      - {fileID: 110141498}
    data:
      first: {fileID: 110216262}
      second:
      - {fileID: 110190255}
      - {fileID: 110147710}
    data:
      first: {fileID: 110223194}
      second:
      - {fileID: 110187723}
      - {fileID: 110163950}
    data:
      first: {fileID: 110229051}
      second:
      - {fileID: 110133655}
      - {fileID: 110177250}
    data:
      first: {fileID: 110245038}
      second:
      - {fileID: 110154127}
      - {fileID: 110141413}
      - {fileID: 110129875}
      - {fileID: 110113781}
      - {fileID: 110100844}
      - {fileID: 110169341}
    data:
      first: {fileID: 110254041}
      second:
      - {fileID: 110169832}
      - {fileID: 110133166}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 312, y: -120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
